styling bugfixes for spacing control

--- a/assets/css/customizer.css
+++ b/assets/css/customizer.css
@@ -842,62 +842,23 @@ input[type="text"] {
   box-shadow: inset 0 0 5px 2px rgba(0, 0, 0, 0.1);
   width: 96%;
   padding: 3%; }
-  .customize-control-spacing .wrapper > .control {
-    display: inline-block; }
-    .customize-control-spacing .wrapper > .control > div:nth-child(odd) {
-      margin-right: 5px; }
-.customize-control-spacing .top,
-.customize-control-spacing .bottom,
-.customize-control-spacing .left,
-.customize-control-spacing .right {
-  width: calc(50% - 5px);
-  float: left; }
-  .customize-control-spacing .top h5,
-  .customize-control-spacing .bottom h5,
-  .customize-control-spacing .left h5,
-  .customize-control-spacing .right h5 {
-    margin: 0;
-    margin-top: 5px; }
-  .customize-control-spacing .top input[type="number"],
-  .customize-control-spacing .bottom input[type="number"],
-  .customize-control-spacing .left input[type="number"],
-  .customize-control-spacing .right input[type="number"] {
-    width: calc(100% - 65px);
-    display: inline-block;
-    height: 36px;
-    position: relative;
-    top: -12px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 3px;
-    -webkit-box-shadow: none;
-    box-shadow: none; }
-  .customize-control-spacing .top .selectize-control,
-  .customize-control-spacing .bottom .selectize-control,
-  .customize-control-spacing .left .selectize-control,
-  .customize-control-spacing .right .selectize-control {
-    width: 60px;
-    display: inline-block; }
-  .customize-control-spacing .top .selectize-control.single .selectize-input:after,
-  .customize-control-spacing .bottom .selectize-control.single .selectize-input:after,
-  .customize-control-spacing .left .selectize-control.single .selectize-input:after,
-  .customize-control-spacing .right .selectize-control.single .selectize-input:after {
-    display: none; }
-  .customize-control-spacing .top .inner,
-  .customize-control-spacing .bottom .inner,
-  .customize-control-spacing .left .inner,
-  .customize-control-spacing .right .inner {
-    border: 1px solid rgba(0, 0, 0, 0.067);
-    border-radius: 3px;
-    padding: 2px;
-    height: 37px; }
-  .customize-control-spacing .top .dashicons,
-  .customize-control-spacing .bottom .dashicons,
-  .customize-control-spacing .left .dashicons,
-  .customize-control-spacing .right .dashicons {
-    width: 20px;
-    line-height: 36px; }
-.customize-control-spacing .right input[type="number"] {
-  top: 0 !important; }
+  .customize-control-spacing .wrapper .control {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; }
+    .customize-control-spacing .wrapper .control > div {
+      width: 48%; }
+      .customize-control-spacing .wrapper .control > div h5 {
+        margin: 10px 0 7px 0; }
+      .customize-control-spacing .wrapper .control > div .inner {
+        display: flex; }
+        .customize-control-spacing .wrapper .control > div .inner input[type="number"] {
+          width: 50%;
+          height: 36px; }
+        .customize-control-spacing .wrapper .control > div .inner .selectize-control.single {
+          width: 50%; }
+          .customize-control-spacing .wrapper .control > div .inner .selectize-control.single > .selectize-input {
+            height: 36px; }
 
 .customize-control-switch input[type="checkbox"] {
   display: none; }
