--- a/assets/scss/controls/spacing.scss
+++ b/assets/scss/controls/spacing.scss
@@ -7,57 +7,29 @@
 		box-shadow:inset 0 0 5px 2px rgba(0,0,0,.1);
 		width: 96%;
 		padding: 3%;
-		> .control {
-			display: inline-block;
+		.control {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
 			> div {
-				&:nth-child(odd) {
-					margin-right: 5px;
+				width: 48%;
+				h5 {
+					margin: 10px 0 7px 0;
+				}
+				.inner {
+					display: flex;
+					input[type="number"] {
+						width: 50%;
+						height: 36px;
+					}
+					.selectize-control.single {
+						width: 50%;
+						> .selectize-input {
+							height: 36px;
+						}
+					}
 				}
 			}
-		}
-	}
-	.top,
-	.bottom,
-	.left,
-	.right {
-		width: calc(50% - 5px);
-		float: left;
-		h5 {
-			margin: 0;
-			margin-top: 5px;
-		}
-		input[type="number"] {
-			width: calc(100% - 65px);
-			display: inline-block;
-			height: 36px;
-			position: relative;
-			top: -12px;
-			border: 1px solid rgba(0,0,0,.1);
-			border-radius: 3px;
-			-webkit-box-shadow: none;
-			box-shadow: none;
-		}
-		.selectize-control {
-			width: 60px;
-			display: inline-block;
-		}
-		.selectize-control.single .selectize-input:after {
-			display: none;
-		}
-		.inner {
-			border: 1px solid rgba(0,0,0,.067);
-			border-radius: 3px;
-			padding: 2px;
-			height: 37px;
-		}
-		.dashicons {
-			width: 20px;
-			line-height: 36px;
-		}
-	}
-	.right {
-		input[type="number"] {
-			top: 0 !important;
 		}
 	}
 }
